# mlops-vision-context-management

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  prek.toml  pyproject.toml  slides.md
.github/workflows/: pages.yml
agentic_vision/: __init__.py  active_learning.py  active_learning_programme.py  coordinates.py  db.py  experiment_plots.py  experiment_runner.py  gemini_agentic_vision.py  metrics.py  object_memory.py  sam3_modal_inference.py  tracing_react.py  viewer_runtime.py
agentic_vision/instance_segmentation/: __init__.py  programme.py  tools.py
docs/: late-interaction.md  ocr-gepa-paper.md
frontend/agentic-vision-viewer/: .env.example  .gitignore  .oxlintrc.json  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
frontend/agentic-vision-viewer/src/: app.css  vite-env.d.ts
frontend/agentic-vision-viewer/src/app/: globals.css  layout.tsx
frontend/agentic-vision-viewer/src/app/runs/[runId]/: page.tsx
frontend/agentic-vision-viewer/src/components/: home-page.tsx  run-detail-page.tsx
frontend/agentic-vision-viewer/src/lib/: api.ts  types.ts  viewer.ts
frontend/agentic-vision-viewer/src/routes/: +layout.svelte  +page.svelte
frontend/agentic-vision-viewer/src/routes/runs/[runId]/: +page.svelte  +page.ts
scripts/: build_active_learning_jsonl.py  run.py  run_active_learning_curve.py  run_active_learning_experiment.py  run_gemini_agentic_vision.py  run_synthetic_experiment.py  sam3_modal_app.py  sample_annotations.json  test_pipeline_fiftyone.py
tests/: test_instance_segmentation_refinement.py  test_slides.py  test_standalone_instance_segmentation_tools.py  test_viewer_api.py  test_viewer_runtime.py
viewer_api/: __init__.py  app.py  config.py  image_sources.py
